# cmake_tutorial

./: readme.md
article/: a_detail_expl_of_exp.md  a_simple_example.md  how_to_publish_lib.md  how_to_work_with_lib.md  intro_to_cmake.md  table_of_content.md
code/a_simple_example/: CMakeLists.txt  main.cpp
code/how_to_publish_lib/only_static/: CMakeLists.txt  main.cpp
code/how_to_publish_lib/only_static/src/: CMakeLists.txt  add.cpp
code/how_to_publish_lib/static_and_dynamic/: CMakeLists.txt  add.h
code/how_to_publish_lib/static_and_dynamic/src/: CMakeLists.txt
code/how_to_work_with_lib/: CMakeLists.txt
code/how_to_work_with_lib/modules/: FindOpenNI2.cmake
code/intro_to_cmake/: hello.cmake  vars.cmake
